# egui-xyflow

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
benchmarks/: README.md  history.md  v0.1.0_20260227T065651Z.json  v0.1.0_20260227T072121Z.json  v0.1.0_20260227T072928Z.json
examples/: arc_diagram.rs  basic_flow.rs  chord_diagram.rs  collapsible_tree.rs  data_pipeline.rs  dependency_graph.rs  disjoint_force_graph.rs  edge_labels.rs  hierarchical_edge_bundling.rs  logic_gates.rs  neural_network.rs  physics_bench.rs  radial_tree.rs  sankey_diagram.rs  state_machine.rs  stress_test.rs  temporal_force_graph.rs
src/: config.rs  events.rs  lib.rs
src/animation/: easing.rs  mod.rs  viewport_animation.rs
src/edges/: bezier.rs  mod.rs  positions.rs  smooth_step.rs  straight.rs
src/graph/: mod.rs  node_position.rs  utils.rs
src/interaction/: connection_drag.rs  drag.rs  mod.rs  pan_zoom.rs  resize.rs  selection.rs
src/physics/: center.rs  collision.rs  force.rs  link.rs  many_body.rs  mod.rs  position.rs  quadtree.rs  sim_node.rs
src/render/: background.rs  canvas.rs  connection_renderer.rs  edge_renderer.rs  handle_renderer.rs  markers.rs  minimap.rs  mod.rs  node_renderer.rs  selection_renderer.rs
src/state/: changes.rs  flow_state.rs  mod.rs  node_lookup.rs
src/types/: changes.rs  connection.rs  edge.rs  handle.rs  mod.rs  node.rs  position.rs  viewport.rs
